Update readme again

--- a/readme
+++ b/readme
@@ -1,5 +1,5 @@
 
-#### DESCRIPITION ####
+#### DESCRIPTION ####
 
 	UYLE (Ultralytics Yolo Label Editor) allow to graphically do mass modification of YOLO's output of label files.
 
